--- a/Basket/BasketConsole/BasketConsole.csproj
+++ b/Basket/BasketConsole/BasketConsole.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BasketLib\BasketLib.csproj" />
+  </ItemGroup>
+
 </Project>
